bugfix: privacy policy is cropped

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     justify-content: center;
     overflow: auto;
     color: white;
+    height: auto;
 }
 
 .content {
